# MsgPackRosInterfaces

./: MsgPackRosInterfaces.h  MsgPackRosStdSrvs.h  MsgPackRosStereoMsgs.h  MsgPackRosTrajectoryMsgs.h  MsgPackRosVisualizationMsgs.h  README.md  library.json  library.properties
MsgPackRosInterfaces/: helper.h
MsgPackRosInterfaces/common_interfaces/: diagnostic_msgs.h  sensor_msgs.h  stereo_msgs.h  visualization_msgs.h
MsgPackRosInterfaces/rcl_interfaces/: action_msgs.h  builtin_interfaces.h  composition_interfaces.h  statistics_msgs.h
examples/arduino/: arduino.ino
examples/ros2_foxy/msgpack_ros_interface/: CMakeLists.txt  package.xml
examples/ros2_foxy/msgpack_ros_interface/include/msgpack_ros_interface/MsgPackRosInterfaces/: MsgPackRosDiagnosticMsgs.h  MsgPackRosGeometryMsgs.h  MsgPackRosNavMsgs.h  MsgPackRosSensorMsgs.h  MsgPackRosShapeMsgs.h  MsgPackRosStdMsgs.h  README_.md
examples/ros2_foxy/msgpack_ros_interface/include/msgpack_ros_interface/MsgPackRosInterfaces/MsgPackRosInterfaces/common_interfaces/: geometry_msgs.h  nav_msgs.h  shape_msgs.h  std_msgs.h  std_srvs.h  trajectory_msgs.h
examples/ros2_foxy/msgpack_ros_interface/include/msgpack_ros_interface/MsgPackRosInterfaces/MsgPackRosInterfaces/rcl_interfaces/: lifecycle_msgs.h  rcl_interfaces.h  rosgraph_msgs.h
examples/ros2_foxy/msgpack_ros_interface/src/: msgpack_ros_interface.cpp
